[package]
name = "cgumi"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
nix = "0.26.2"
shell-escape = "0.1.5"
thiserror = "1.0.40"
zbus = "3.13.1"

[dev-dependencies]
env_logger = "0.9"
test-log = "0.2.11"
rand = "0.8.5"
chrono = "0.4.24"
